# Data-Insight-Assistant

./: .env.example  .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
src/agent_project/: __init__.py  app.py  config.py  database.py  graph.py  schema_rag.py  tools.py
src/agent_project/agents/: __init__.py  narrative_agent.py  query_agent.py  viz_agent.py
