[project]
name = "data-insight-agent"
version = "0.1.0"
description = "AI-powered data insight assistant with multi-agent collaboration"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "dashscope>=1.25.18",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "tabulate>=0.10.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
